# FormulaLLMPY

./: .sample.env  README.md  pyproject.toml
examples/: agents.ipynb  formula.ipynb  pipelines.ipynb  untar.ipynb
examples/data/: MappingExample.4ml
examples/data/parser/: GeneratedTar.4ml  ParserDSL.4ml  TinyDemoParser.4ml  prompt.txt  untar1.c  untar2.c
formulallm/: __init__.py  formula_agent.py  formula_program.py  formula_tools.py  prompts.py
formulallm/agents/: __init__.py  formula_agent.py  formula_tools.py  prompts.py
formulallm/formula/: __init__.py  formula_program.py
formulallm/pipelines/: __init__.py  loader.py  pipelines.py
formulallm/utils/: __init__.py  extraction.py
