[tool.poetry]
name = "formulallm"
version = "0.1.2"
description = ""
authors = ["Aadi Bajpai <aadi.bajpai@vanderbilt.edu>","Stephen Johnson <stephen.johnson@vanderbilt.edu>"]
readme = "README.md"
packages = [{include = "formulallm"}]

[tool.poetry.dependencies]
python = ">3.10,<3.11"
openai = "0.28.1"
langchain = "0.1.8"
langsmith = "0.1.5"
langchain_community = "0.0.28"
pythonnet = "^3.0.3"
tqdm = "4.66.2"
jupyter = "1.0.0"
pillow = "10.2.0"
ipython = "8.21.0"
pymupdf = "^1.23.26"
chromadb = "^0.4.24"
unstructured = "^0.12.6"
python-pptx = "^0.6.23"
python-docx = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
