[tool.poetry]
name = "formulallm"
version = "0.1.2"
description = ""
authors = ["Aadi Bajpai <aadi.bajpai@vanderbilt.edu>","Stephen Johnson <stephen.johnson@vanderbilt.edu>","Qishen Zhang <qishen23@gmail.com>"]
readme = "README.md"
packages = [{include = "formulallm"}]

[tool.poetry.dependencies]
python = ">3.10,<3.13"
langchain = "0.3.17"
langsmith = "0.3.5"
langchain_deepseek = "0.1.0"
langchain_openai = "0.3.3"
langgraph = "0.2.69"
pythonnet = "^3.0.3"
tqdm = "4.67.1"
jupyter = "1.1.1"
notebook="7.3.2"
pillow = "11.1.0"
ipython = "8.21.0"
pymupdf = "^1.23.26"
unstructured = "^0.16.17"
python-pptx = "^0.6.23"
python-docx = "^1.1.0"
python-dotenv = "^1.0.1"
openai = "^1.61.0"
pypdf2 = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
